// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Audio authenticate 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio authenticate 2`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio authenticate 3`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio authenticate 4`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio authenticate 5`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio authenticate 6`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio autoPlay 1`] = `
<audio
  autoPlay={true}
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio autoPlay 2`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio autoPlay 3`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio autoPlay 4`] = `
<audio
  autoPlay={true}
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio className 1`] = `
<audio
  className="uu5-bricks-audio my-classname uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio controlled 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio controlled 2`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio controlled 3`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio controlled 4`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio default props 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio disabled 1`] = `
<span
  className="uu5-bricks-audio uu5-common-disabled uu5-bricks-audio-wrapper"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
  <audio
    className="uu5-common-disabled uu5-bricks-audio-player"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
  >
    <source
      src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
    />
  </audio>
</span>
`;

exports[`UU5.Bricks.Audio disabled 2`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio disabled 3`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio disabled 4`] = `
<span
  className="uu5-bricks-audio uu5-common-disabled uu5-bricks-audio-wrapper"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
  <audio
    className="uu5-common-disabled uu5-bricks-audio-player"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
  >
    <source
      src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
    />
  </audio>
</span>
`;

exports[`UU5.Bricks.Audio docKit examples UU5.Bricks.Audio should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Header
    className={null}
    colorSchema={null}
    content="autoplay"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    level={2}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Audio
    authenticate={false}
    autoPlay={true}
    className={null}
    controlled={true}
    disabled={false}
    hidden={false}
    id="uuID03"
    key="uuID03"
    loop={false}
    mainAttrs={null}
    muted={false}
    name={null}
    nestingLevel={null}
    noIndex={false}
    playbackRate={1}
    preload="auto"
    pureRender={false}
    ref_={null}
    selected={false}
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
    style={null}
    tooltip={null}
  />
  <Header
    className={null}
    colorSchema={null}
    content="loop"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID06"
    ignoreInnerHTML={false}
    key="uuID06"
    level={2}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Audio
    authenticate={false}
    autoPlay={false}
    className={null}
    controlled={true}
    disabled={false}
    hidden={false}
    id="uuID07"
    key="uuID07"
    loop={true}
    mainAttrs={null}
    muted={false}
    name={null}
    nestingLevel={null}
    noIndex={false}
    playbackRate={1}
    preload="auto"
    pureRender={false}
    ref_={null}
    selected={false}
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
    style={null}
    tooltip={null}
  />
  <Header
    className={null}
    colorSchema={null}
    content="preload"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID010"
    ignoreInnerHTML={false}
    key="uuID010"
    level={2}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Audio
    authenticate={false}
    autoPlay={false}
    className={null}
    controlled={true}
    disabled={false}
    hidden={false}
    id="uuID011"
    key="uuID011"
    loop={false}
    mainAttrs={null}
    muted={false}
    name={null}
    nestingLevel={null}
    noIndex={false}
    playbackRate={1}
    preload="none"
    pureRender={false}
    ref_={null}
    selected={false}
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
    style={null}
    tooltip={null}
  />
  <Header
    className={null}
    colorSchema={null}
    content="muted"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID012"
    ignoreInnerHTML={false}
    key="uuID012"
    level={2}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Audio
    authenticate={false}
    autoPlay={false}
    className={null}
    controlled={true}
    disabled={false}
    hidden={false}
    id="uuID013"
    key="uuID013"
    loop={false}
    mainAttrs={null}
    muted={true}
    name={null}
    nestingLevel={null}
    noIndex={false}
    playbackRate={1}
    preload="auto"
    pureRender={false}
    ref_={null}
    selected={false}
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.Audio hidden 1`] = `
<audio
  className="uu5-bricks-audio uu5-common-hidden uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio hidden 2`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio hidden 3`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio hidden 4`] = `
<audio
  className="uu5-bricks-audio uu5-common-hidden uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio id 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="myId"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio loop 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  loop={true}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio loop 2`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio loop 3`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio loop 4`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  loop={true}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio mainAttrs 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio muted 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  muted={true}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio muted 2`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio muted 3`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio muted 4`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  muted={true}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio name 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel 2`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel 3`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel 4`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel 5`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel 6`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel 7`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel 8`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel 9`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel 10`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel 11`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel 12`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel 13`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel 14`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel 15`] = `""`;

exports[`UU5.Bricks.Audio nestingLevel 16`] = `""`;

exports[`UU5.Bricks.Audio nestingLevel 17`] = `""`;

exports[`UU5.Bricks.Audio nestingLevel 18`] = `""`;

exports[`UU5.Bricks.Audio nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Audio nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Audio noIndex 1`] = `
<audio
  className="uu5-bricks-audio uu5-noindex uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio noIndex 2`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio noIndex 3`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio noIndex 4`] = `
<audio
  className="uu5-bricks-audio uu5-noindex uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio preload 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio preload 2`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  preload="metadata"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio preload 3`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  preload="metadata"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio preload 4`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  preload="none"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio preload 5`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  preload="none"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio preload 6`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  preload="metadata"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio pureRender 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio pureRender 2`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio pureRender 3`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio pureRender 4`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio selected 1`] = `
<audio
  className="uu5-bricks-audio uu5-common-selected uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio selected 2`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio selected 3`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio selected 4`] = `
<audio
  className="uu5-bricks-audio uu5-common-selected uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio src 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio style 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio style 2`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio style 3`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio style 4`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio tooltip 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;
